add_subdirectory(common)
add_subdirectory(depth_to_disparity)
add_subdirectory(hammerhead_scheduler)
add_subdirectory(image_recorder)
add_subdirectory(image_viewer)
add_subdirectory(legacy_obstacle_data_converter)
add_subdirectory(obstacle_data_recorder)
add_subdirectory(offline_point_cloud_generator)
add_subdirectory(point_cloud_recorder)
add_subdirectory(point_cloud_soup_recorder)
add_subdirectory(set_camera_params)
add_subdirectory(toggle_recording)
add_subdirectory(topbot_publisher)